# ips_gui

./: Cargo.toml  README.md  build.rs  ips_gui_design_doc.md
.claude/: settings.local.json
.github/workflows/: build.yml
src/: main.rs
src/ips/: discovery.rs  matcher.rs  mod.rs  types.rs
src/ips/extract/: comfyui.rs  exif.rs  jpeg.rs  mod.rs  png.rs  webp.rs
