[package]
name = "ips_gui"
version = "0.1.0"
edition = "2021"
description = "GUI frontend for IPS - Image Prompt Search"

[[bin]]
name = "ips_gui"
path = "src/main.rs"

[dependencies]
eframe = "0.29"
rayon = "1"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
regex = "1"
fuzzy-matcher = "0.3"
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }

[dev-dependencies]
tempfile = "3"

# resvg is used on all platforms to generate the runtime window-icon PNG.
[build-dependencies]
resvg = "0.44"

# ico + winres are only needed when embedding the icon in a Windows executable.
[target.'cfg(target_os = "windows")'.build-dependencies]
ico = "0.3"
winres = "0.1"

[profile.release]
strip = true
opt-level = 3
